gccida/g0/true_regnum
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/true_regnum/src/jump.c:2890:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( unsigned __int8 *)( x->fld[0].rtwint + 2), 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/true_regnum/src/jump.c:2892:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)x + 2)); 
  ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/true_regnum/src/obj/jump.o] Error 1
